--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ h2 {
 .question {
     font-weight: bold;
     margin-bottom: 10px;
-    color: #074f57ff;
+    color: #074f57;
 }
 
 .option {
@@ -29,22 +29,8 @@ h2 {
 }
 
 .option input[type="radio"] {
-    appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    width: 20px;
-    height: 20px;
-    border: 2px solid #077187;
-    border-radius: 50%;
-    outline: none;
-    cursor: pointer;
-    transition: background-color 0.3s, border-color 0.3s;
     margin-right: 10px;
-}
-
-.option input[type="radio"]:checked {
-    background-color: #077187ff;
-    border-color: #074f57ff;
+    cursor: pointer;
 }
 
 .feedback {
@@ -53,11 +39,11 @@ h2 {
     background-color: #B4D2E7;
     padding: 10px;
     border-radius: 5px;
-    color: #074f57ff;
+    color: #074f57;
 }
 
 .next-button {
-    background-color: #077187ff;
+    background-color: #077187;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -67,7 +53,7 @@ h2 {
 }
 
 .next-button:hover {
-    background-color: #074f57ff;
+    background-color: #074f57;
 }
 
 button {
@@ -79,5 +65,5 @@ button {
     font-size: 1.2em;
     font-weight: bold;
     margin-top: 20px;
-    color: #074f57ff;
+    color: #074f57;
 }
